plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'sg.edu.nus.facilityflow'
version = '0.1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

javafx {
    version = '25'
    modules = ['javafx.controls']
}

dependencies {
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'

    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'sg.edu.nus.facilityflow.FacilityFlowApplication'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 25
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs '--enable-native-access=ALL-UNNAMED'
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

checkstyle {
    toolVersion = '10.26.1'
    configFile = file('config/checkstyle/checkstyle.xml')
}

tasks.named('check') {
    dependsOn jacocoTestReport
}
